--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>${primefaces-version}</version>
+            <version>7.0</version>
         </dependency>
 
         <!--Primefaces themes-->
